kubernetes/staging/common/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cranecloud-ingress
  namespace: cranecloud
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: cc-staging
    networking.gke.io/v1beta1.FrontendConfig: cranecloud-frontend-config
spec:
  tls:
    - hosts:
        - staging.cranecloud.io
        - staging-api.cranecloud.io
        - staging-docs.cranecloud.io
        - staging-mira.cranecloud.io
      secretName: cranecloud-tls-secret
  rules:
  - host: staging.cranecloud.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: cranecloud-frontend
          servicePort: 80

  - host: staging-api.cranecloud.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: cranecloud-backend
          servicePort: 80

  - host: staging-docs.cranecloud.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: cranecloud-docs
          servicePort: 80

  - host: staging-mira.cranecloud.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: mira
          servicePort: 80
